@@ -21,6 +21,8 @@ Changes from 4.3.24 -> 4.3.25 (XX Jan 2016)
   and logfetch when client is running in --local mode without editing xymonclient.sh
 * Add file globbing capabilities to logfetch to avoid need to fork commands
   to create dynamic lists (Suggested by Jeremy Laidman)
+* The "Valid Until" time for an acknowledgement is now displayed on the ack log
+  report page (Thanks, Dominique Frise)
 
 
 Changes from 4.3.23 -> 4.3.24 (23 Nov 2015)
